               __      _ _ ___ _               
              / _|__ _(_) |_  ) |__  __ _ _ _  
             |  _/ _` | | |/ /| '_ \/ _` | ' \ 
             |_| \__,_|_|_/___|_.__/\__,_|_||_|

=============================================================
Fail2Ban (version 0.3.0)                           02/??/2005
=============================================================

ver. 0.3.0 (02/??/2005) - beta
----------
- Re-writting of parts of the code in order to handle several
  log files with different rules
- Removed sshd.py because it is no more needed
- Fixed a bug when exiting with IP in the ban list
- Added PID lock file
- Improved some parts of the code
- Added ipfw-start-rule option (thanks to Robert Edeker)

ver. 0.1.2 (11/21/2004) - beta
----------
- Add ipfw and ipfwadm support. The rules are taken from
  BlockIt. Thanks to Robert Edeker
- Add -e option which allows to set the interface. Thanks to
  Robert Edeker who reminded me this
- Small code cleaning

ver. 0.1.1 (10/23/2004) - beta
----------
- Add SIGTERM handler in order to exit nicely when in daemon
  mode
- Add -r option which allows to set the maximum number of
  login failures
- Remove the Metalog class as the log file are not so syslog
  daemon specific
- Rewrite log reader to be service centered. Sshd support
  added. Match "Failed password" and "Illegal user"
- Add /etc/fail2ban.conf configuration support
- Code documentation


ver. 0.1.0 (10/12/2004) - alpha
----------
- Initial release